instructions.InstructionsDrawG.scala.error
Erreur de compilation :
InstructionsDrawG:16: error: type mismatch;
 found   : Int(17)
 required: Boolean
  else if(i == 15 || 17){
                     ^