instructions.InstructionsDrawG.scala.code

for(i <- 0 to 18){
  
  if(i == 0){
   
    baisseBrosse()
    
  }
  
  if(i%4 == 0 || i == 14 || i == 18){
    
    gauche()
    
  }
  
  else if(i == 15 || 17){
    
    droite();
    
    if(i == 15){
      
      leveBrosse()
      
    }
    
  }
  
  avance()
  
}